// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FormInput default 1`] = `
<section
  className="sc-cSHVUG eGldRJ"
>
  <legend
    className="sc-kAzzGY jLIHFs"
  >
    
  </legend>
</section>
`;

exports[`Storyshots FormInput email 1`] = `
<section
  className="sc-cSHVUG eGldRJ"
>
  <legend
    className="sc-kAzzGY hsXfUZ"
  >
    Your Email
  </legend>
  <input
    className="sc-chPdSV fVQLCx"
    name="emailInput"
    placeholder="i.e. mohammad@gmail.com"
    type="email"
  />
</section>
`;

exports[`Storyshots FormInput text 1`] = `
<section
  className="sc-cSHVUG eGldRJ"
>
  <legend
    className="sc-kAzzGY lcVYpo"
  >
    Your Text
  </legend>
  <input
    className="sc-chPdSV eOKmUI"
    name="textInput"
    placeholder="text here"
    type="text"
  />
</section>
`;

exports[`Storyshots FormInput text-area 1`] = `
<section
  className="sc-cSHVUG eGldRJ"
>
  <legend
    className="sc-kAzzGY eyIiya"
  >
    Your Text
  </legend>
  <textarea
    className="sc-kgoBCf cnIzEh"
    name="textInput"
    placeholder="text here"
  />
</section>
`;
